--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "app",
   "private": "true",
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
+    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+  },
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.2.2",
-    "esbuild": "^0.15.11"
+    "esbuild": "^0.15.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
